[gd_scene load_steps=8 format=3 uid="uid://ceb081jeav080"]

[ext_resource type="Theme" uid="uid://cxav2eygb1aru" path="res://Other/new_theme.tres" id="1_rwrou"]
[ext_resource type="Texture2D" uid="uid://d0fmdmnosmq32" path="res://Assets/Background/Pink.png" id="2_22j6f"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="2_d37d5"]
[ext_resource type="PackedScene" uid="uid://ur8gu6gbgjed" path="res://Prefab/Transition.tscn" id="3_xfbr2"]

[sub_resource type="Animation" id="Animation_ktebe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-83, -44)]
}

[sub_resource type="Animation" id="Animation_crfdl"]
resource_name = "TitleBackground"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-83, -44), Vector2(-51, -12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pt8gf"]
_data = {
"RESET": SubResource("Animation_ktebe"),
"TitleBackground": SubResource("Animation_crfdl")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rwrou")
script = ExtResource("2_d37d5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -44.0
offset_right = 1235.0
offset_bottom = 692.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_22j6f")
stretch_mode = 1

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -22.0
offset_right = 93.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAY"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = 39.0
offset_right = 93.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
text = "QUIT"

[node name="Label" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -146.0
offset_right = 182.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.129412, 0.121569, 0.188235, 1)
theme_override_constants/outline_size = 25
theme_override_font_sizes/font_size = 90
text = "PLATFORM EDVENTURE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pt8gf")
}
autoplay = "TitleBackground"

[node name="Transition" parent="." instance=ExtResource("3_xfbr2")]

[connection signal="button_up" from="Play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="Quit" to="." method="_on_quit_button_up"]
[connection signal="_TransitionFinished" from="Transition" to="." method="_on_canvas_layer__transition_finished"]
